--- a/src/course-class-service/course-class-service-api-spec.yaml
+++ b/src/course-class-service/course-class-service-api-spec.yaml
@@ -1,3 +1,59 @@
-openapi: 3.0.0
+openapi: 3.0.2 
 info:
-  version: '1.0.0'
+  title: Course Class Service API Specification
+  description: OpenAPI for Course Class API
+  version: 1
+servers:
+  - url: http://localhost:8000
+    description: Course Class Service API Server
+externalDocs:
+  - url: https://github.com/catherinevania/microservice-obe
+    description: Github Repository
+paths:
+  /course-classes:
+    get:
+
+    post:
+
+  /course-classes/{id}:
+    get:
+      summary: Get a class by ID
+      description: View a class with certain ID
+      parameters:
+        - name: id
+          in: path
+          description: ID of the class to retrieve
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Succesfully get class by ID
+          content: 
+            application/json:
+              schema: 
+                type: object
+                properties:
+                    name:
+                      type: string
+                    course_id:
+                      type: integer
+                    syllabus_id:
+                      type: integer
+                    thumbnail_img:
+                      type: string
+                      contentMediaType: image/png
+                      contentEncoding: base64     
+        '404':
+          description: Course not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string 
+
+    patch:
+
+    delete:
