--- a/src/course-class-service/course-service-api-spec.yaml
+++ b/src/course-class-service/course-service-api-spec.yaml
@@ -11,48 +11,7 @@ externalDocs:
     description: Github Repository
 paths:
   /course:
-    get:
-      summary: Get all courses
-      description: View all courses from database
-      responses:
-        '200':
-          description: Succesfully get all courses
-          content: 
-            application/json: 
-              schema: 
-                type: array
-                items:
-                  type: object
-                  properties:
-                    study_program:
-                      type: integer
-                    code:
-                      type: string
-                    name: 
-                      type: string
-                    course_credit:
-                      type: integer
-                    lab_credit:
-                      type: integer
-                    type:
-                      type: string
-                    short_description:
-                      type: string
-                    minimal_requirement:
-                      type: string
-                    study_material_summary:
-                      type: string
-                    learning_media:
-                      type: string
-        '400':
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
+    
     post:
       summary: Create new courses
       description: Create new courses to database
@@ -180,7 +139,52 @@ paths:
                     type: string
   /course/{id}:
     get:
-
+      summary: Get a course by ID
+      description: View a course with certain ID
+      parameters:
+        - name: id
+          in: path
+          description: ID of the course to retrieve
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Succesfully get courses by ID
+          content: 
+            application/json:
+              schema: 
+                type: object
+                properties:
+                    study_program:
+                      type: integer
+                    code:
+                      type: string
+                    name: 
+                      type: string
+                    course_credit:
+                      type: integer
+                    lab_credit:
+                      type: integer
+                    type:
+                      type: string
+                    short_description:
+                      type: string
+                    minimal_requirement:
+                      type: string
+                    study_material_summary:
+                      type: string
+                    learning_media:
+                      type: string
+        '404':
+          description: Course not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string 
     patch:
     
     delete:
