--- a/src/course-class-service/course-service-api-spec.yaml
+++ b/src/course-class-service/course-service-api-spec.yaml
@@ -11,6 +11,7 @@ externalDocs:
     description: Github Repository
 paths:
   /course:
+    get:
     
     post:
       summary: Create new courses
