--- a/src/course-class-service/course-class-service-api-spec.yaml
+++ b/src/course-class-service/course-class-service-api-spec.yaml
@@ -12,45 +12,31 @@ externalDocs:
 paths:
   /course-classes:
     get:
-    summary: Get a course by ID
-      description: View a course with certain ID
-      parameters:
-        - name: id
-          in: path
-          description: ID of the course to retrieve
-          required: true
-          schema:
-            type: integer
+   get:
+      summary: Get all classes
+      description: View all classes from database
       responses:
         '200':
-          description: Succesfully get courses by ID
+          description: Succesfully get all classes
           content: 
-            application/json:
+            application/json: 
               schema: 
-                type: object
-                properties:
-                    study_program:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                    course_id:
                       type: integer
-                    code:
-                      type: string
-                    name: 
-                      type: string
-                    course_credit:
+                    syllabus_id:
                       type: integer
-                    lab_credit:
-                      type: integer
-                    type:
+                    thumbnail_img:
                       type: string
-                    short_description:
-                      type: string
-                    minimal_requirement:
-                      type: string
-                    study_material_summary:
-                      type: string
-                    learning_media:
-                      type: string
-        '404':
-          description: Course not found
+                      contentMediaType: image/png
+                      contentEncoding: base64 
+        '400':
+          description: Bad request
           content:
             application/json:
               schema:
