--- a/src/course-class-service/course-service-api-spec.yaml
+++ b/src/course-class-service/course-service-api-spec.yaml
@@ -228,27 +228,72 @@ paths:
                   message:
                     type: string
     patch:
-
-    delete:
-      summary: Delete existing course
-      description: Delete existing course from database
-      parameters:
-        - name: id
-          in: path
-          description: ID of the course to delete
-          required: true
-          schema:
-            type: integer
+          summary: Update existing course
+      description: Update certain attributes of an existing course in database
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                study_program:
+                  type: integer
+                  enum:
+                  - 1
+                  - 2
+                  - 3
+                  - 4
+                  - 5
+                code: 
+                  type: string
+                name:
+                  type: string
+                course_credit:
+                  type: integer
+                lab_credit:
+                  type: integer
+                type:
+                  type: string
+                  enum: 
+                    - Mandatory
+                    - Elective
+                short_description:
+                  type: string
+                minimal_requirement:
+                  type: string
+                study_material_summary:
+                  type: string
+                learning_media:
+                  type: string
       responses:
         '200':
-          description: Succesfully delete the course
+          description: Succesfully update course
           content: 
             application/json:
               schema: 
                 type: object
                 properties:
-                  success: 
-                    type: boolean
+                    study_program:
+                      type: integer
+                    code:
+                      type: string
+                    name: 
+                      type: string
+                    course_credit:
+                      type: integer
+                    lab_credit:
+                      type: integer
+                    type:
+                      type: string
+                    short_description:
+                      type: string
+                    minimal_requirement:
+                      type: string
+                    study_material_summary:
+                      type: string
+                    learning_media:
+                      type: string
         '404':
           description: Course not found
           content:
@@ -258,81 +303,7 @@ paths:
                 properties:
                   message:
                     type: string
-  /course-classes:
-    get:
 
-    post:
-
-  /course-classes/{id}:
-    get:
-
-    patch:
-      summary: Update existing course classes
-      description: Update certain attributes of an existing course classes in database
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                course:
-                  type: integer
-                  description: The course classes's ID
-                  enum:
-                  - 1
-                  - 2
-                  - 3
-                  - 4
-                  - 5
-                  required: true
-                class-name:
-                  type: string
-                  description: The name of course classes
-                  required: true
-                thumbnail_img:
-                  type: string
-                  format: binary
-                  description: The binary data of the thumbnail image file
-                  required: true
-      responses:
-        '200':
-          description: Succesfully update course classes
-          content: 
-            application/json:
-              schema: 
-                schema:
-              type: object
-              properties:
-                course:
-                  type: integer
-                  description: The course classes's ID
-                  enum:
-                  - 1
-                  - 2
-                  - 3
-                  - 4
-                  - 5
-                  required: true
-                class-name:
-                  type: string
-                  description: The name of course classes
-                  required: true
-                thumbnail_img:
-                  type: string
-                  format: binary
-                  description: The binary data of the thumbnail image file
-                  required: true
-        '404':
-          description: Course classes not found
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-    
     delete:
       summary: Delete existing course
       description: Delete existing course from database
